--- a/PrimeValLife.Web/appsettings.json
+++ b/PrimeValLife.Web/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "PrimeValLifeDB": "Server=localhost\\SQLEXPRESS;Database=pvl_dev;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;"
+    "PrimeValLifeDB": "Server=localhost;Database=pvl_dev;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;"
   },
   "AllowedHosts": "*"
 }
