--- a/TUT.IAuth/TUT.IAuth.csproj
+++ b/TUT.IAuth/TUT.IAuth.csproj
@@ -16,4 +16,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TUT.Utilities\TUT.Utilities.csproj" />
+  </ItemGroup>
+
 </Project>
