--- a/PrimeValLife.Web/appsettings.json
+++ b/PrimeValLife.Web/appsettings.json
@@ -8,5 +8,10 @@
   "ConnectionStrings": {
     "PrimeValLifeDB": "Server=localhost\\SQLEXPRESS;Database=pvl_dev;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "HostConfiguration": {
+    "APIHost": "https://localhost:7143/api/",
+    "AdminHost": "",
+    "ApplicationHost": ""
+  }
 }
