API response change

--- a/PrimeValLife.Web/PrimeValLife.Web.csproj
+++ b/PrimeValLife.Web/PrimeValLife.Web.csproj
@@ -7,21 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid.EntityFrameworkAdapter" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\PrimeValLife.Core\PrimeValLife.Core.csproj" />
     <ProjectReference Include="..\TUT.IAuth\TUT.IAuth.csproj" />
+    <ProjectReference Include="..\TUT.Utilities\TUT.Utilities.csproj" />
   </ItemGroup>
 
 </Project>
