--- a/PrimeValLife.Web/PrimeValLife.Web.csproj
+++ b/PrimeValLife.Web/PrimeValLife.Web.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\TUT.Utilities\TUT.Utilities.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Products\" />
+  </ItemGroup>
+
 </Project>
