--- a/PrimeValLife.Web/PrimeValLife.Web.csproj
+++ b/PrimeValLife.Web/PrimeValLife.Web.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Views\Shared\_ProductWrap.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid.EntityFrameworkAdapter" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
       <PrivateAssets>all</PrivateAssets>
@@ -22,7 +26,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\Products\" />
+    <UpToDateCheckInput Remove="Views\Shared\_ProductWrap.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Views\Shared\_ProductWrap.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Views\Home\_ProductWrap.cshtml" />
   </ItemGroup>
 
 </Project>
